--- a/src/options/options.css
+++ b/src/options/options.css
@@ -1,11 +1,37 @@
-ul {
+h1 {
+	text-align: center;
+}
+
+.Options-addItemWrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	justify-content: center;
+	max-width: 280px;
+	margin: 0 auto;
+	padding: 0 8px;
+}
+
+.Options-addItemWrapper ul {
 	list-style: none;
+	padding: 0;
+	margin: 0;
 }
 
-span {
+.Options-addItemWrapper span {
 	cursor: pointer;
+	color: black;
+	margin-right: 4px;
 }
 
-li:not(last-of-type) {
+.Options-addItemWrapper span {
+	color: maroon;
+}
+
+.Options-addItemWrapper li:not(last-of-type) {
 	margin-bottom: 8px;
+}
+
+.Options-actionsWrapper {
+	margin-bottom: 16px;
 }
